--- a/Blazor_Academy/Pages/_Layout.cshtml
+++ b/Blazor_Academy/Pages/_Layout.cshtml
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     @*<link href="css/site.css" rel="stylesheet" />*@
     <link href="Blazor_Academy.styles.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
 
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
