--- a/Blazor_Academy/Pages/PortfolioOverview.razor
+++ b/Blazor_Academy/Pages/PortfolioOverview.razor
@@ -11,25 +11,25 @@
             <div class="col-lg-6">
                 <div class="position-relative mb-5">
                     <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" @onclick="pageMoveToNaver">코드에서 naver로 페이지 이동시키기</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="position-relative mb-5">
                     <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="https://naver.com">http a테그를 사용 하여 naver로 페이지 이동시키기</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="position-relative mb-5 mb-lg-0">
                     <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" @onclick="pageMoveToIndex">코드에서 인덱스 페이지로 이동 시키기</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="position-relative">
                     <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                    <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="/">http a 테그를 사용 해서 인덱스 페이지로 이동 시키기</a>
                 </div>
             </div>
         </div>
