--- a/HyeongGyu_Project.Admin/Pages/_Layout.cshtml
+++ b/HyeongGyu_Project.Admin/Pages/_Layout.cshtml
@@ -92,6 +92,38 @@
                 </div>
             </li>
 
+            <!--Blazor강의에서 만든 샘플 파일 메뉴 추가.-->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                DEMO <!--변경-->
+            </div>
+
+            <!--<div id="collapseDemo" class="collapse" aria-labelledby="headingPages" 에서 id를 변경하지 않고 그대로 사용 하면 기존 메뉴와 동시에 동작됨.-->
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseDemo"<!--변경--> aria-expanded="true"
+                   aria-controls="collapseDemo"<!--변경-->>
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Samples<!--변경--></span>
+                </a>
+                <div id="collapseDemo"<!--변경--> class="collapse" aria-labelledby="headingPages"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">LECTURE SAMPLES:</h6>
+                        <a class="collapse-item" href="/Samples/TodoListInMemory">TodoListInMemory</a><!--변경-->
+                        <a class="collapse-item" href="/Pages/Register">Register</a>
+                        <a class="collapse-item" href="/Pages/ForgotPassword">Forgot Password</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Other Pages:</h6>
+                        <a class="collapse-item" href="/Pages/NotFoundPage">404 Page</a>
+                        <a class="collapse-item" href="/Pages/BlankPage">Blank Page</a>
+                    </div>
+                </div>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
@@ -107,7 +139,7 @@
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Pages</span>
                 </a>
-                <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
