Test.razor페이지에 blazor에서 스크롤 기능 사용 하는 샘플 코드 작성함.

--- a/HyeongGyu_Project.Admin/Pages/Pages/Test.razor
+++ b/HyeongGyu_Project.Admin/Pages/Pages/Test.razor
@@ -12,13 +12,14 @@
 @for (int i = 0; i < 10; i++)
 {
     <h1 id="@GetId(i)">Header @i</h1>
-    @* @LoremNET.Lorem.Paragraph(wordCount: 30, sentenceCount: 10) *@
+    @LoremNET.Lorem.Paragraph(wordCount: 30, sentenceCount: 10)
 }
 
 @* 👇 Integrate the component *@
 <AnchorNavigation />
 
 @code {
+    string routingPath = "/Samples/Test";
     string GetId(int i) => "header-" + i;
-    string GetHref(int i) => "#" + GetId(i);
+    string GetHref(int i) => $"{routingPath}#" + GetId(i);
 }
